--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -32,7 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: timesketch/frontend
+        working-directory: timesketch/frontend-ng
     strategy:
       matrix:
         os: [ubuntu-20.04, ubuntu-22.04]
