Setup frontend unit tests with vitest (#3013)
* add first test

* add vuetify to unit test

* move event bus to own file

* add tests

* add test to tsdev.sh

* remove async

* remove test component

* format config

* set jest env for tests

* use new unit tests

* run tests in frontend-ng

* Update timesketch/frontend-ng/vitest.config.js

* Update timesketch/frontend-ng/src/components/UploadFormButton.test.js

---------

Co-authored-by: Johan Berggren <jberggren@gmail.com>

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -32,7 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: timesketch/frontend
+        working-directory: timesketch/frontend-ng
     strategy:
       matrix:
         os: [ubuntu-20.04, ubuntu-22.04]
@@ -48,4 +48,4 @@ jobs:
           yarn install
 
       - name: Run unit tests with yarn
-        run: yarn run test:unit
+        run: yarn run test
