Add optional TLS verification

--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -260,6 +260,10 @@ YETI_API_ROOT = ''
 # API key to authenticate requests
 YETI_API_KEY = ''
 
+# Path to a TLS certificate that can be used to authenticate servers
+# using self-signed certificates. Provide the full path to the .crt file.
+YETI_TLS_CERTIFICATE = None
+
 # Labels to narrow down indicator selection
 YETI_INDICATOR_LABELS = ['domain']
 
