Plugin system and inital providers

--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -341,3 +341,25 @@ INTELLIGENCE_TAG_METADATA = '/etc/timesketch/intelligence_tag_metadata.yaml'
 
 # Context links configuration
 CONTEXT_LINKS_CONFIG_PATH = '/etc/timesketch/context_links.yaml'
+
+# LLM provider configs
+LLM_PROVIDER_CONFIGS = {
+    # To use the Ollama provider you need to download and run an Ollama server.
+    # See instructions at: https://ollama.ai/
+    'ollama': {
+        'server_url': 'http://localhost:11434',
+        'model': 'mistral',
+    },
+    # To use the Vertex AI provider you need to:
+    # 1. Create and export a Service Account Key from the Google Cloud Console.
+    # 2. Set the GOOGLE_APPLICATION_CREDENTIALS environment variable to the full path
+    # to your service account private key file.
+    # 3. Install the python libraries: $ pip3 install google-cloud-aiplatform
+    #
+    # IMPORTANT: Private keys must be kept secret. If you expose your private key it is
+    # recommended to revoke it immediately from the Google Cloud Console.
+    'vertexai': {
+        'model': 'gemini-pro',
+        'project_id': '',
+    }
+}
