--- a/timesketch/frontend-ng/package.json
+++ b/timesketch/frontend-ng/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.1.96",
+    "@vue/compat": "~3.2.5",
     "apexcharts": "^3.27.1",
     "axios": "^0.21.1",
     "cytoscape": "^3.24.0",
@@ -26,12 +27,11 @@
     "vega-embed": "^4.2.2",
     "vega-lite": "3.4.0",
     "vue": "~3.1.5",
-    "@vue/compat": "~3.2.5",
     "vue-apexcharts": "^1.6.2",
     "vue-dragscroll": "^3.0.0",
     "vue-moment": "^4.0.0",
     "vue-router": "^3.0.2",
-    "vuetify": "^2.5.14",
+    "vuetify": "3.5.8",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
@@ -46,12 +46,13 @@
     "@vue/test-utils": "^1.3.0",
     "chai": "^4.1.2",
     "deepmerge": "^4.2.2",
-    "eslint": "^7.32.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint-plugin-vue": "^9.22.0",
+    "eslint-plugin-vuetify": "^2.1.1",
     "happy-dom": "^12.10.3",
     "node-sass": "^8.0.0",
     "sass": "~1.32",
