--- a/timesketch/frontend-ng/package.json
+++ b/timesketch/frontend-ng/package.json
@@ -21,16 +21,18 @@
     "lodash": "^4.17.11",
     "marked": ">=2.0.0 <5.0.0",
     "moment": "^2.24.0",
-    "v-calendar": "2.4.1",
+    "tiny-emitter": "^2.1.0",
+    "@popperjs/core": "2.11.8",
+    "v-calendar": "3.1.2",
     "vega": "^5.4.0",
     "vega-embed": "^4.2.2",
     "vega-lite": "3.4.0",
-    "vue": "~3.1.5",
+    "vue": "~3.4.21",
     "vue-apexcharts": "^1.6.2",
     "vue-dragscroll": "^3.0.0",
-    "vue-moment": "^4.0.0",
+    "vue-moment": "^4.1.0",
     "vue-router": "^4.3.0",
-    "vuetify": "3.5.8",
+    "vuetify": "3.5.14",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
@@ -40,7 +42,7 @@
     "@vue/cli-plugin-eslint": "~5.0.8",
     "@vue/cli-plugin-unit-mocha": "~5.0.8",
     "@vue/cli-service": "~5.0.8",
-    "@vue/compiler-sfc": "^3.3.11",
+    "@vue/compiler-sfc": "^3.4.21",
     "@vue/eslint-config-standard": "^6.1.0",
     "@vue/test-utils": "^1.3.0",
     "chai": "^4.1.2",
