--- a/docker/release/config.env
+++ b/docker/release/config.env
@@ -42,7 +42,7 @@ POSTGRES_PASSWORD=
 REDIS_VERSION=6.0.8-alpine
 
 # Nginx webserver version to run.
-NGINX_VERSION=1.19.3-alpine
+NGINX_VERSION=1.25.5-alpine-slim
 
 # Nginx PATH local conf
 NGINX_CONFIG_PATH=./etc/nginx.conf
