--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -352,7 +352,7 @@ LLM_PROVIDER_CONFIGS = {
     # See instructions at: https://ollama.ai/
     'ollama': {
         'server_url': 'http://localhost:11434',
-        'model': 'mistral',
+        'model': 'gamma:7b',
     },
     # To use the Vertex AI provider you need to:
     # 1. Create and export a Service Account Key from the Google Cloud Console.
@@ -367,3 +367,9 @@ LLM_PROVIDER_CONFIGS = {
         'project_id': '',
     }
 }
+
+# Data types configuration
+DATA_TYPES_PATH = '/etc/timesketch/data_types.csv'
+PROMPT_NL2Q = 'etc/timesketch/prompt_nl2q'
+LLM_PROVIDER = ''
+
