--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -351,7 +351,7 @@ LLM_PROVIDER_CONFIGS = {
     # To use the Ollama provider you need to download and run an Ollama server.
     # See instructions at: https://ollama.ai/
     'ollama': {
-        'server_url': 'http://ollama:11434',
+        'server_url': 'http://localhost:11434',
         'model': 'gemma:7b',
     },
     # To use the Vertex AI provider you need to:
@@ -371,5 +371,5 @@ LLM_PROVIDER_CONFIGS = {
 # LLM nl2q configuration
 DATA_TYPES_PATH = '/etc/timesketch/nl2q/data_types.csv'
 PROMPT_NL2Q = '/etc/timesketch/nl2q/prompt_nl2q'
-LLM_PROVIDER = 'ollama'
+LLM_PROVIDER = ''
 
