Few-shots examples with the prompt V2 for NL2Q

--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -363,7 +363,7 @@ LLM_PROVIDER_CONFIGS = {
     # IMPORTANT: Private keys must be kept secret. If you expose your private key it is
     # recommended to revoke it immediately from the Google Cloud Console.
     'vertexai': {
-        'model': 'gemini-pro',
+        'model': 'gemini-1.5-flash-001',
         'project_id': '',
     }
 }
@@ -371,5 +371,6 @@ LLM_PROVIDER_CONFIGS = {
 # LLM nl2q configuration
 DATA_TYPES_PATH = '/etc/timesketch/nl2q/data_types.csv'
 PROMPT_NL2Q = '/etc/timesketch/nl2q/prompt_nl2q'
+EXAMPLES_NL2Q = '/etc/timesketch/nl2q/examples_nl2q'
 LLM_PROVIDER = ''
 
