--- a/test_data/dfiq/facets/F1001.yaml
+++ b/test_data/dfiq/facets/F1001.yaml
@@ -1,7 +1,8 @@
-display_name: Test Facet
+name: Test Facet
 description: Test Facet
 type: facet
 id: F1001
+uuid: 79c6d69d-4de0-4fc0-af5f-b02248430104
 tags:
   - test
 parent_ids:
