--- a/test_data/dfiq/scenarios/S1001.yaml
+++ b/test_data/dfiq/scenarios/S1001.yaml
@@ -1,6 +1,7 @@
-display_name: Test Scenario
+name: Test Scenario
 description: Test Scenario
 type: scenario
 id: S1001
+uuid: 6e5d9e63-b477-4392-8742-c85ac9b653e2
 tags:
   - test
