Enable/Disable DFIQ via system settings

--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -338,6 +338,7 @@ SIGMA_TAG_DELAY = 5
 
 #-------------------------------------------------------------------------------
 # DFIQ - Digital Forensics Investigation Questions
+DFIQ_ENABLED = False
 DFIQ_PATH = '/etc/timesketch/dfiq/'
 
 # Intelligence tag metadata configuration
