debugging broken unit test workflows

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -13,6 +13,8 @@ jobs:
         os: [ubuntu-20.04, ubuntu-22.04]
         python-version: ['3.9', '3.10']
     steps:
+      - name: Clean virtualenv
+        run: rm -rf /home/runner/.local/share/virtualenvs/timesketch-*
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v1
@@ -25,6 +27,8 @@ jobs:
           pipenv install -r test_requirements.txt
       - name: Run unit tests
         run: |
+          pipenv --venv
+          pipenv run pip freeze | grep pytest
           pipenv run python run_tests.py
 
   # Frontend tests (VueJS)
