--- a/timesketch/frontend-v3/package.json
+++ b/timesketch/frontend-v3/package.json
@@ -8,13 +8,13 @@
     "lint": "eslint . --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "axios": "^1.7.7",
     "@mdi/font": "7.4.47",
     "core-js": "^3.37.1",
     "dayjs": "^1.11.13",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
-    "vuetify": "^3.6.11"
+    "vuetify": "^3.6.11",
+    "axios": "^1.7.7"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
