--- a/timesketch/frontend-v3/package.json
+++ b/timesketch/frontend-v3/package.json
@@ -14,8 +14,7 @@
     "roboto-fontface": "*",
     "vue": "^3.4.31",
     "vuetify": "^3.6.11",
-    "axios": "^1.7.7",
-    "tiny-emitter": "^2.1.0"
+    "axios": "^1.7.7"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
