--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -338,7 +338,7 @@ SIGMA_TAG_DELAY = 5
 
 #-------------------------------------------------------------------------------
 # DFIQ - Digital Forensics Investigation Questions
-DFIQ_ENABLED = True
+DFIQ_ENABLED = False
 DFIQ_PATH = '/etc/timesketch/dfiq/'
 
 # Intelligence tag metadata configuration
@@ -364,7 +364,7 @@ LLM_PROVIDER_CONFIGS = {
     # IMPORTANT: Private keys must be kept secret. If you expose your private key it is
     # recommended to revoke it immediately from the Google Cloud Console.
     'vertexai': {
-        'model': 'gemini-1.5-flash',
+        'model': 'gemini-1.5-flash-001',
         'project_id': 'timesketch-nl2q',
     },
     # To use Google's AI Studio simply obtain an API key from https://aistudio.google.com/
