--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -365,7 +365,7 @@ LLM_PROVIDER_CONFIGS = {
     # recommended to revoke it immediately from the Google Cloud Console.
     'vertexai': {
         'model': 'gemini-1.5-flash-001',
-        'project_id': 'timesketch-nl2q',
+        'project_id': '',
     },
     # To use Google's AI Studio simply obtain an API key from https://aistudio.google.com/
     # pip install google-generativeai
