Add AIStudio as a supported LLM library (#3254)
* Add AIStudio as a supported LLM library

--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -366,7 +366,13 @@ LLM_PROVIDER_CONFIGS = {
     'vertexai': {
         'model': 'gemini-1.5-flash-001',
         'project_id': '',
-    }
+    },
+    # To use Google's AI Studio simply obtain an API key from https://aistudio.google.com/
+    # pip install google-generativeai
+    'aistudio': {
+        'api_key': '', 
+        'model': 'gemini-2.0-flash-exp',
+    },
 }
 
 # LLM nl2q configuration
