LLM interface & vertexai: add response_schema support, add location parameter and fix some bugs (#3268)
* Add response_schema to vertexai and fix multiple bugs
* Update timesketch.conf

--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -362,7 +362,9 @@ LLM_PROVIDER_CONFIGS = {
     # To use the Vertex AI provider you need to:
     # 1. Create and export a Service Account Key from the Google Cloud Console.
     # 2. Set the GOOGLE_APPLICATION_CREDENTIALS environment variable to the full path
-    # to your service account private key file.
+    # to your service account private key file by adding it to the docker-compose.yml
+    # under environment:
+    # GOOGLE_APPLICATION_CREDENTIALS=/usr/local/src/timesketch/<key_file>.json
     # 3. Install the python libraries: $ pip3 install google-cloud-aiplatform
     #
     # IMPORTANT: Private keys must be kept secret. If you expose your private key it is
@@ -372,7 +374,7 @@ LLM_PROVIDER_CONFIGS = {
         'project_id': '',
     },
     # To use Google's AI Studio simply obtain an API key from https://aistudio.google.com/
-    # pip install google-generativeai
+    # pip3 install google-generativeai
     'aistudio': {
         'api_key': '',
         'model': 'gemini-2.0-flash-exp',
@@ -384,4 +386,3 @@ DATA_TYPES_PATH = '/etc/timesketch/nl2q/data_types.csv'
 PROMPT_NL2Q = '/etc/timesketch/nl2q/prompt_nl2q'
 EXAMPLES_NL2Q = '/etc/timesketch/nl2q/examples_nl2q'
 LLM_PROVIDER = ''
-
