Add llm_summarization as feature to LLM_PROVIDER_CONFIGS

--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -379,6 +379,12 @@ LLM_PROVIDER_CONFIGS = {
             'project_id': '',
         },
     },
+    'llm_summarization': {
+        'aistudio': {
+            'model': 'gemini-2.0-flash-exp',
+            'project_id': '',
+        },
+    },
     'default': {
         'aistudio': {
              'api_key': '',
