--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -13,8 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [ubuntu-20.04, ubuntu-22.04]
-        python-version: ['3.9', '3.10']
+        os: [ubuntu-22.04]
+        python-version: ["3.10"]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
@@ -40,8 +40,8 @@ jobs:
         working-directory: timesketch/frontend-ng
     strategy:
       matrix:
-        os: [ubuntu-20.04, ubuntu-22.04]
-        node-version: ["20"]
+        os: [ubuntu-22.04]
+        node-version: ["18"]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Node ${{ matrix.node-version }}
