Add LLM event summarization feature (#3281)
* Intitial draft of AI/LLM feature to summarize events

* Update SettingsDialog to be more granular for AI features

* WIP: event summarization feature

* Add metrics to llm_summarize, add shimmer effect to EventList.vue

* Added ts-event-list-container so that elements do not overlap

* Latest changes to llm_summarize.py & EventList.vue

* Add llm_summarization as feature to LLM_PROVIDER_CONFIGS

* fix aistudio.py

* Update timesketch.conf and dev/docker-entrypoint.sh

* Fixes after review

* Increase LLM timeout

* Increase LLM timeout, logger statement fix

* timeout/todo fixes

---------

Co-authored-by: Johan Berggren <jberggren@gmail.com>

--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -379,6 +379,12 @@ LLM_PROVIDER_CONFIGS = {
             'project_id': '',
         },
     },
+    'llm_summarization': {
+        'aistudio': {
+            'model': 'gemini-2.0-flash-exp',
+            'project_id': '',
+        },
+    },
     'default': {
         'aistudio': {
              'api_key': '',
@@ -392,3 +398,6 @@ LLM_PROVIDER_CONFIGS = {
 DATA_TYPES_PATH = '/etc/timesketch/nl2q/data_types.csv'
 PROMPT_NL2Q = '/etc/timesketch/nl2q/prompt_nl2q'
 EXAMPLES_NL2Q = '/etc/timesketch/nl2q/examples_nl2q'
+
+# LLM event summarization configuration
+PROMPT_LLM_SUMMARIZATION = '/etc/timesketch/llm_summarize/prompt.txt'
