--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-20.04, ubuntu-22.04]
-        python-version: ['3.9', '3.10']
+        python-version: ["3.9", "3.10"]
 
     steps:
       - uses: actions/checkout@v2
@@ -44,7 +44,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-20.04, ubuntu-22.04]
-        node-version: ["18"]
+        node-version: ["20"]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Node ${{ matrix.node-version }}
@@ -66,7 +66,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-20.04, ubuntu-22.04]
-        node-version: ["18"]
+        node-version: ["20"]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Node ${{ matrix.node-version }}
