--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -379,16 +379,16 @@ LLM_PROVIDER_CONFIGS = {
             'project_id': '',
         },
     },
-    'llm_summarization': {
+    'llm_summarize': {
         'aistudio': {
             'model': 'gemini-2.0-flash-exp',
             'project_id': '',
         },
     },
     'default': {
-        'aistudio': {
-             'api_key': '',
-             'model': 'gemini-2.0-flash-exp',
+        'ollama': {
+            'server_url': 'http://ollama:11434',
+            'model': 'gemma:7b',
         },
     }
 }
