--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -401,3 +401,10 @@ EXAMPLES_NL2Q = '/etc/timesketch/nl2q/examples_nl2q'
 
 # LLM event summarization configuration
 PROMPT_LLM_SUMMARIZATION = '/etc/timesketch/llm_summarize/prompt.txt'
+
+#-------------------------------------------------------------------------------
+# Timesketch UI Option
+
+# Get the search processing timelines setting.
+# If set to True, the search processing timelines options will be displayed in the UI.
+SEARCH_PROCESSING_TIMELINES = False
