--- a/contrib/nginx.conf
+++ b/contrib/nginx.conf
@@ -9,17 +9,17 @@ http {
         client_max_body_size 0m;
         location / {
             # Unauthenticated ReDoS prevention
-            set $test "";
+            set $redos_check "";
             if ($request_uri ~* "(/login)"){
-              set $test U;
+              set $redos_check U;
             }
             if ($request_method = POST){
-              set $test "${test}M";
+              set $redos_check "${redos_check}M";
             }
             if ($http_content_type != "application/x-www-form-urlencoded"){
-              set $test "${test}CT";
+              set $redos_check "${redos_check}CT";
             }
-            if ($test = UMCT){
+            if ($redos_check = UMCT){
               return 403;
             }
             proxy_buffer_size 128k;
@@ -33,17 +33,17 @@ http {
         }
         location /legacy/ {
             # Unauthenticated ReDoS prevention
-            set $test "";
+            set $redos_check "";
             if ($request_uri ~* "(/login)"){
-              set $test U;
+              set $redos_check U;
             }
             if ($request_method = POST){
-              set $test "${test}M";
+              set $redos_check "${redos_check}M";
             }
             if ($http_content_type != "application/x-www-form-urlencoded"){
-              set $test "${test}CT";
+              set $redos_check "${redos_check}CT";
             }
-            if ($test = UMCT){
+            if ($redos_check = UMCT){
               return 403;
             }
             proxy_buffer_size 128k;
