--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,6 +37,7 @@ nav:
       - Admin CLI: guides/admin/admin-cli.md
       - Context Links: guides/admin/context-links.md
       - LLM Features: guides/admin/llm-features.md
+      - DFIQ Templates: guides/admin/load-dfiq.md
   - Developers:
       - Getting started: developers/getting-started.md
       - Frontend development: developers/frontend-development.md
