update prompt related settings

--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -380,9 +380,15 @@ LLM_PROVIDER_CONFIGS = {
         },
     },
     'llm_summarize': {
-        'aistudio': {
-            'model': 'gemini-2.0-flash-exp',
+        'vertexai': {
+            'model': 'gemini-2.0-flash-001',
             'project_id': '',
+        },
+    },
+    'llm_forensic_report': {
+        'aistudio': {
+            'model': 'gemini-2.0-flash-001',
+            'api_key': '',
         },
     },
     'default': {
@@ -401,3 +407,6 @@ EXAMPLES_NL2Q = '/etc/timesketch/nl2q/examples_nl2q'
 
 # LLM event summarization configuration
 PROMPT_LLM_SUMMARIZATION = '/etc/timesketch/llm_summarize/prompt.txt'
+
+# LLM starred events to forensic report configuration
+PROMPT_LLM_FORENSIC_REPORT = 'etc/timesketch/llm_forensic_report/prompt.txt'
