--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -4,7 +4,8 @@ on:
   push:
     branches:
       - master
-
+    paths:
+      - 'docs/**'
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -15,6 +16,8 @@ jobs:
           python-version: 3.8
       - name: Install dependencies
         run: pip install mkdocs-material mkdocs-redirects
+      - name: Build site
+        run: mkdocs build
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
@@ -25,7 +28,6 @@ jobs:
           external_repository: google/timesketch #add this line.
           user_name: github-actions[bot]
           user_email: 41898282+github-actions[bot]@users.noreply.github.com
-      - name: Build site
-        run: mkdocs build
+
 
       #- run: mkdocs gh-deploy --force
